fix: don't set z-index on bce-form

--- a/packages/core/src/components/bce-form/bce-form.scss
+++ b/packages/core/src/components/bce-form/bce-form.scss
@@ -4,7 +4,7 @@
 
 :host([design='card']) {
   @include bce-color-default(surface);
-  @include elevate(1);
+  @include elevate(1, false);
   display: block;
   margin-bottom: 0.5rem;
   padding: 1rem;
